# Habit-Tracker

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  PORTS.md  README.md  SPEC.md  docker-compose.dev.yml
.claude/: architecture-decisions.md  coding-conventions.md  commands.md  known-issues.md  memory.md  project-structure.md  research-findings.md  scratchpad.md  settings.json  specialist-roles.md
.handoff/: CONTINUE.md  HANDOFF.md  SCRATCH.md
analysis/: 00-EXECUTIVE-SUMMARY.md  01-adversarial-code-review.md  02-five-angle-analysis.md  (+6 more)
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 78e34eb83f13_initial_schema.py
backend/app/: main.py
backend/app/core/: config.py  deps.py  exceptions.py  ratelimit.py  redis_client.py  security.py
backend/app/models/: __init__.py  base.py  habit.py  habit_log.py  user.py
backend/app/routers/: auth.py  habits.py
backend/app/schemas/: auth.py  habit.py
backend/app/services/: auth_service.py  habit_service.py  refresh_whitelist.py  streak_service.py  time_service.py
backend/tests/: conftest.py
backend/tests/core/: test_config.py  test_deps.py  test_exceptions.py  test_refresh_jti.py  test_security.py
backend/tests/routers/: conftest.py  test_auth_rotation.py  test_ratelimit.py
backend/tests/schemas/: test_auth.py  test_auth_hardening.py  test_habit_rrule.py  test_habit_validation.py
backend/tests/services/: test_completion_rate.py  test_habit_service_builders.py  test_refresh_whitelist.py  test_streak_service.py  test_time_service.py
(+42 files in other folders)
