[project]
name = "habit-tracker-api"
version = "0.1.0"
description = "FastAPI habit tracking application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-dateutil>=2.8.0",
    "email-validator>=2.3.0",
    "redis>=8.0.1",
    "slowapi>=0.1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "ruff>=0.2.0",
    "fakeredis>=2.36.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# Alembic migrations are generated; don't lint their long auto-emitted lines.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses Depends()/Query()/etc. as argument defaults by design; these are
# not the mutable-default footgun that B008 targets.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Body",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
